--- a/e27.html
+++ b/e27.html
@@ -33,13 +33,13 @@
             <!-- Python Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=N8xEgSe5RwE"><img src="thumbnail/th82.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=N8xEgSe5RwE"><img src="th82.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">Data Security: Protect your critical data/h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@IBMTechnology"><img src="pfp/pfp26.jpg" 
+                            <a href="https://www.youtube.com/@IBMTechnology"><img src="pfp26.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
@@ -54,13 +54,13 @@
             <!-- JavaScript Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=jI8IKpjiCSM"><img src="thumbnail/th83.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=jI8IKpjiCSM"><img src="th83.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">What is Cloud Security?</h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@IBMTechnology"><img src="pfp/pfp26.jpg" 
+                            <a href="https://www.youtube.com/@IBMTechnology"><img src="pfp26.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
@@ -77,13 +77,13 @@
             <!-- HTML/CSS Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=Qt9lhzFhW_c"><img src="thumbnail/th84.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=Qt9lhzFhW_c"><img src="th84.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">What Is Cloud Security?</h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@SimplilearnOfficial"><img src="pfp/pfp27.jpg" 
+                            <a href="https://www.youtube.com/@SimplilearnOfficial"><img src="pfp27.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
