--- a/e6.html
+++ b/e6.html
@@ -33,13 +33,13 @@
             <!-- Python Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=rbbTd-gkajw"><img src="thumbnail\th16.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=rbbTd-gkajw"><img src="th16.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">10 Sorting Algorithms Easily Explained</h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@CodingWithLewis"><img src="pfp/pfp12.jpg" 
+                            <a href="https://www.youtube.com/@CodingWithLewis"><img src="pfp12.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
@@ -54,13 +54,13 @@
             <!-- JavaScript Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=ySN5Wnu88nE"><img src="thumbnail/th17.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=ySN5Wnu88nE"><img src="th17.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">A* (A Star) Search Algorithm</h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@Computerphile"><img src="pfp\pfp13.jpg" 
+                            <a href="https://www.youtube.com/@Computerphile"><img src="pfp13.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
@@ -77,13 +77,13 @@
             <!-- HTML/CSS Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=aircAruvnKk"><img src="thumbnail/th18.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=aircAruvnKk"><img src="th18.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">Deep learning</h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@3blue1brown"><img src="pfp/pfp14.jpg" 
+                            <a href="https://www.youtube.com/@3blue1brown"><img src="pfp14.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
