--- a/e7.html
+++ b/e7.html
@@ -33,13 +33,13 @@
             <!-- Python Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=A3ZUpyrnCbM"><img src="thumbnail\th19.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=A3ZUpyrnCbM"><img src="th19.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">Introduction to Stacks and Queues</h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@CSDojo"><img src="pfp/pfp15.jpg" 
+                            <a href="https://www.youtube.com/@CSDojo"><img src="pfp15.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
@@ -54,13 +54,13 @@
             <!-- JavaScript Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=R9PTBwOzceo"><img src="thumbnail/th20.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=R9PTBwOzceo"><img src="th20.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">Introduction to Linked List</h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@nesoacademy"><img src="pfp\pfp16.jpg" 
+                            <a href="https://www.youtube.com/@nesoacademy"><img src="pfp16.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
@@ -77,13 +77,13 @@
             <!-- HTML/CSS Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=qH6yxkw0u78"><img src="thumbnail/th21.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=qH6yxkw0u78"><img src="th21.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">Data structures: Introduction to Trees</h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@mycodeschool"><img src="pfp/pfp17.jpg" 
+                            <a href="https://www.youtube.com/@mycodeschool"><img src="pfp17.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
